k8s/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: counter-backend
  namespace: counter-service
spec:
  type: ClusterIP
  selector:
    component: backend
  ports:
  - name: http
    port: 8000
    targetPort: 8000

---
apiVersion: v1
kind: Service
metadata:
  name: counter-frontend
  namespace: counter-service
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
  labels:
    app: counter-service
spec:
  type: LoadBalancer
  selector:
    component: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  loadBalancerClass: eks.amazonaws.com/nlb
---
apiVersion: v1
kind: Service
metadata:
  name: counter-postgres
  namespace: counter-service
spec:
  type: ClusterIP
  selector:
    component: database
  ports:
  - name: postgres
    port: 5432
    targetPort: 5432
