k8s/base/ingress-frontend.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: counter-frontend
  namespace: counter-service
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    # Force public subnets (because the controller previously chose private/NAT subnets):
    alb.ingress.kubernetes.io/subnets: subnet-0d29fa0e49dc39023,subnet-008b8f6d7715abc73
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: counter-frontend
                port:
                  number: 80
